--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ authors = ["Elliott Mahler <join.together@gmail.com>"]
 edition = "2018"
 description = "Compile a crate and run cbindgen on it in a single command."
 repository = "https://github.com/ejmahler/unreal_rust_compile"
+license-file = "LICENSE"
 
 [profile.release]
 lto = "thin"
